--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-base": "^19.2.60",
+    "@syncfusion/ej2-data": "^19.2.60",
+    "@syncfusion/ej2-react-schedule": "^19.2.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-agenda": "0.0.8",
     "react-dom": "^17.0.2",
+    "react-native-calendars": "^1.1266.0",
+    "react-native-webview": "^11.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
