--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-agenda": "0.0.8",
+    "react-calendar-timeline": "^0.27.0",
     "react-dom": "^17.0.2",
     "react-native-calendars": "^1.1266.0",
     "react-native-webview": "^11.13.0",
